Fix spacing before nav

--- a/css/index.css
+++ b/css/index.css
@@ -57,7 +57,6 @@ section>article {
 	z-index: -1;
 }
 
-.sticky-hack { border: none; display: block; height: 1px; width: 100%; order: 2; }
 nav {
 	box-sizing: border-box;
 	display: flex;
@@ -70,6 +69,14 @@ nav {
 	z-index: 99;
 	overflow: hidden;
 	order: 3;
+}
+.sticky-hack {
+	border: none;
+	display: block;
+	height: 1px;
+	margin: 0;
+	order: 2;
+	width: 100%;
 }
 nav.sticky {
 	padding: 0;
